Fix styling making map too big

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,3 +1,10 @@
 body {
   margin: 0px;
 }
+.coords {
+  box-shadow: gray 1px 1px 2px;
+  margin: 10px;
+  padding: 4px;
+  display: inline-block;
+  background-color: #f7f7f7;
+}
